--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,5 @@
-spring.application.name=auth
-spring.security.user.name=admin
-spring.security.user.password=lokesh
-spring.docker.compose.enabled=false
-spring.application.name=spring-security-step-by-step
-
-spring.jpa.defer-datasource-initialization=true
-
-spring.sql.init.mode=always
-
-spring.datasource.url=jdbc:mysql://localhost:3306/security_users
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/letroca
+spring.datasource.username=postgres
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+
+api.security.token.secret=${JWT_SECRET:my-secret-key}
